--- a/WebScraping/prueba copy.ipynb
+++ b/WebScraping/prueba copy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
       "3                       Toyota Hilux Sw4 Ambulancia   5.000\n",
       "4                    Jeep Cherokee Limited 2.4 Full  16.500\n",
       "5                            Nissan Tiida Hatchback  24.700\n",
-      "6                             Nissan Tiida Sedan 16   6.550\n",
+      "6                             Nissan Tiida Sedan 16   5.900\n",
       "7               Mazda A3 Sedan Mazda 3 Sedan Mt 2.0  11.200\n",
       "8                                      Bmw 525i 2.5  11.900\n",
       "9                         Jac T8 Comfort Diésel 4x4  16.600\n",
@@ -39,49 +39,44 @@
       "11                 Renault Fluence Dinamique 2.0 At  13.900\n",
       "12                         Mazda Captiva Cx-9 Mazda  13.900\n",
       "13  Porsche Cayenne S Tiptronic Cayenne S Tiptronic  29.900\n",
-      "14                     Kia Otima Regal Optima Regal   3.000\n",
-      "15                     Nissan Murano Le Awd 4x4 Cvt   9.650\n",
-      "16                           Chevrolet Captiva X2.4  11.900\n",
-      "17                   Chevrolet Cruze 1.8 Ls At Full   8.900\n",
-      "18                                Nissan Versa 2014  34.000\n",
-      "19                                    Kia Optima Se   9.190\n",
-      "20                               Nissan Tiida Sedan   8.099\n",
-      "21                      Toyota Hilux Hilux 4x4 2022  30.500\n",
-      "22                                Kia Rio 1.4 Mt-lx  13.200\n",
-      "23                    Kia Kia Picanto Full- 22 Full   9.599\n",
-      "24                       Chevrolet Tracker Mecanica  10.400\n",
-      "25                                Peugeot 406 Sedan   4.200\n",
-      "26                                 Mazda 3 2.0 2019  13.000\n",
-      "27                               Renault Duster 2.0   9.500\n",
-      "28                                Hyundai H100 2014  12.000\n",
-      "29             Volkswagen Gol Sedan Concept 1.6 Mec   8.900\n",
-      "30                              Toyota Yaris Basico  45.000\n",
-      "31                        Chery Tiggo 7 Tiggo 7 Pro  16.200\n",
-      "32                          Suzuki Swift Automatico  22.999\n",
-      "33             Mitsubishi L200 4x4 2.4 Td Hp Glx Mt  24.000\n",
-      "34                          Nissan Tilda Intermedio   8.000\n",
-      "35                     Mitsubishi Eclipse Cross 4wd  18.500\n",
-      "36                Toyota Yaris Sedán Automático Gnv      80\n",
-      "37                             Nissan Pathfinder Le   8.450\n",
-      "38        Suzuki Dzire New Dzire Gl Amt 4x2 V2 Glpt  12.800\n",
-      "39                    Mazda 3 Hb 2014 Hathback 2014   7.950\n",
-      "40                                    Mazda 3 Sedan   7.690\n",
-      "41                Great Wall Voleex C30 Fashionable      65\n",
-      "42                                 Mg 3 1.5l Mt Std   7.400\n",
-      "43              Jetour X70 X70 1.5t Aut 4x2 Limited  17.000\n",
-      "44                                Subaru 1998 Sedan  16.000\n",
-      "45                       Ford Explorer Limited 2012  17.200\n",
-      "46                               Suzuki Baleno 2018   9.500\n",
-      "47                                  Toyota Hilux Sr  25.900\n"
+      "14                     Nissan Murano Le Awd 4x4 Cvt   9.650\n",
+      "15                           Chevrolet Captiva X2.4  11.900\n",
+      "16                   Chevrolet Cruze 1.8 Ls At Full   8.900\n",
+      "17                                Nissan Versa 2014  34.000\n",
+      "18                                    Kia Optima Se   9.190\n",
+      "19                               Nissan Tiida Sedan   8.099\n",
+      "20                      Toyota Hilux Hilux 4x4 2022  30.500\n",
+      "21                                Kia Rio 1.4 Mt-lx  13.200\n",
+      "22                    Kia Kia Picanto Full- 22 Full   9.599\n",
+      "23                       Chevrolet Tracker Mecanica  10.400\n",
+      "24                                Peugeot 406 Sedan   4.200\n",
+      "25                                 Mazda 3 2.0 2019  13.000\n",
+      "26                               Renault Duster 2.0   9.500\n",
+      "27                                Hyundai H100 2014  12.000\n",
+      "28             Volkswagen Gol Sedan Concept 1.6 Mec   8.900\n",
+      "29                              Toyota Yaris Basico  45.000\n",
+      "30                        Chery Tiggo 7 Tiggo 7 Pro  16.200\n",
+      "31                          Suzuki Swift Automatico  22.999\n",
+      "32             Mitsubishi L200 4x4 2.4 Td Hp Glx Mt  24.000\n",
+      "33                          Nissan Tilda Intermedio   8.000\n",
+      "34                     Mitsubishi Eclipse Cross 4wd  18.500\n",
+      "35                Toyota Yaris Sedán Automático Gnv      80\n",
+      "36                             Nissan Pathfinder Le   8.450\n",
+      "37        Suzuki Dzire New Dzire Gl Amt 4x2 V2 Glpt  12.800\n",
+      "38                    Mazda 3 Hb 2014 Hathback 2014   7.950\n",
+      "39                                    Mazda 3 Sedan   7.690\n",
+      "40                Great Wall Voleex C30 Fashionable      65\n",
+      "41                                 Mg 3 1.5l Mt Std   7.400\n",
+      "42              Jetour X70 X70 1.5t Aut 4x2 Limited  17.000\n",
+      "43                                Subaru 1998 Sedan  16.000\n",
+      "44                       Ford Explorer Limited 2012  17.200\n",
+      "45                               Suzuki Baleno 2018   9.500\n",
+      "46                                  Toyota Hilux Sr  25.900\n",
+      "47                            Chevrolet Orlando 2.4  10.500\n"
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "import re\n",
-    "\n",
     "# URL del listado de productos\n",
     "url = 'https://listado.mercadolibre.com.pe/carros#D[A:carros]'\n",
     "\n",
